-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

7/24/14
    - Added line to cplex_options() to prevent default creation
      of clone1.log files when using parallel CPLEX routines
      (only effective for CPLEX 12.6.0.1 or later).
    - Fixed fatal error when uopf() shuts down all gens
      attempting to satisfy Pmin limits.

7/23/14
    - Fixed error in User's Manual description of LODF and
      further clarified text.


Changes since 4.1
-----------------

7/1/14
    - Released version 5.0b1.

6/27/14
    - Added support for LP solver GLPK which is built-in to
      Octave. Use 'opf.dc.solver' option 'GLPK'.
    - INCOMPATIBLE CHANGE: Removed optional 'max_it' field from
      opt argument to qps_matpower() and qps_*() family of
      functions (except qps_mips()).

6/13/14
    - Added ability for loadcase() to load MATPOWER case M-files
      that are not in the Matlab path by specifying an explicit
      path in the input filename.

6/9/14
    - Fixed memory issue resulting from nested om fields when
      repeatedly running an OPF using the results of a previous
      OPF as input. Thanks to Carlos Murillo-Sanchez.

5/23/14
    - Added case5.m, a 5-bus, 5-generator example case from Rui Bo.
    - Removed extras/psse2matpower.
    - Fixes to printpf() to suppress printing of dispatchable load
      constraint section when there are no dispatchable loads and
      to never print line constraints for unconstrained lines.
    - Fixed crash when using Knitro to solve cases with all
      lines unconstrained.
    - Switched to [L,U,p,q] = lu(B,'vector') form for factorization
      in fast-decoupled power flow in fdpf(), resulting in ~5x